--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "expo-app-loading": "^2.1.1",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
     "expo-image": "~1.12.12",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
+    "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
@@ -42,6 +44,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
