--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "helpers/FontProvider.js", "components/Wallpapers.js"  ]
+, "helpers/FontProvider.js", "components/Wallpapers.js", "app/home/image.jsx"  ]
 }
