--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-media-library": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
